FAgregado el contenido adicional del blog y una mejor tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
                     inicio donde vamos a explicar 
                     las cosas increibles que se 
                     pueden hacer con ramas</p>
+                <p>
+                    Y es que la quiero (la quiero), y es que la adoro 
+                    (la adoro), y es que se que por su amor, es que late mi 
+                    corazón
+                </p>
             </div>
         </div>
     </body>
