ATeminé de hacer modificaciones

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
                     (la adoro), y es que se que por su amor, es que late mi 
                     corazón
                 </p>
+                <p>
+                    Suscribete y dale like! :D
+                </p>
             </div>
         </div>
     </body>
