--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <tittle>Bienvenido a hiperblog</tittle>
+        <tittle>Bienvenido a Hyperblog</tittle>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
